pulled in jeffs code

--- a/frontend/gifting-frontend/angular.json
+++ b/frontend/gifting-frontend/angular.json
@@ -91,11 +91,23 @@
             ],
             "scripts": []
           }
+        },
+        "lint": {
+          "builder": "@angular-eslint/builder:lint",
+          "options": {
+            "lintFilePatterns": [
+              "src/**/*.ts",
+              "src/**/*.html"
+            ]
+          }
         }
       }
     }
   },
   "cli": {
-    "analytics": "89e35cfe-40b3-405c-b109-c2e065179df0"
+    "analytics": "0765673c-6e34-4316-af19-c7455fcb9bdd",
+    "schematicCollections": [
+      "@angular-eslint/schematics"
+    ]
   }
 }
